--- a/curriculo/styles.css
+++ b/curriculo/styles.css
@@ -99,7 +99,7 @@ a svg:hover{
     margin: 20px 10px;
     transform: scale(1);
     border-radius: 10px;
-    background-image: url(backgrround1.png);
+    background-image: url(background1.png);
     background-size: cover;
 }
 #background1:hover{
