--- a/kakashi/styles.css
+++ b/kakashi/styles.css
@@ -10,6 +10,12 @@ body{
     margin: 0;
     padding: 0em;
 }
+.kakashi{
+    background-color: yellow;
+    position: fixed;
+    width: 400px;
+    text-align: center;
+}
 .container{
     text-align: center;
     width: 100vw;
@@ -73,7 +79,6 @@ body{
                 .menu svg:hover{
                     cursor: pointer;
                 }
-                    
         .page-one-mid{
             height: 45vw;
             display: flex;
@@ -83,7 +88,7 @@ body{
             align-items: center;
         }
             .king{
-                font-weight: 800;
+                font-weight: 900;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -127,7 +132,7 @@ body{
 }
     .page-two-one{
         display: flex;
-        height: 400px;
+        height: 440px;
         width: 100%;
         align-items: center;
         justify-content: center;
@@ -172,7 +177,7 @@ body{
         width: 100%;
         display: flex;
         justify-content: center;
-        column-gap: 13px;
+        column-gap: 19px;
     }
         .page-two-two div img:hover{
             box-shadow: 0px 0px 0px 8px;
@@ -257,6 +262,7 @@ body{
     display: flex;
     color: white;
     justify-content: space-around;
+    font-family: 'Roboto', sans-serif;
 }
     .page-five-left{
         display: flex;
