--- a/kakashi-ninja-copiador-ataca-novamente/styles.css
+++ b/kakashi-ninja-copiador-ataca-novamente/styles.css
@@ -16,6 +16,13 @@ body{
     padding: 0;
     color: var(--blue);
 }
+.kakashi{
+    background-color: yellow;
+    position: fixed;
+    width: 400px;
+    text-align: center;
+    z-index: 1;
+}
 .container{
     margin: 0 auto;
     padding: 0;
