--- a/kakashi-ninja-copiador-ataca-novamente/styles.css
+++ b/kakashi-ninja-copiador-ataca-novamente/styles.css
@@ -3,9 +3,9 @@
     --blue: #3a54b4;
     --orange: #ff8b7c;
     --brown: #fef7ed;
-    overflow-x: hidden;
 }
 /* fonts */
+@font-face { font-family: Madefor; src: url("media/WixMadeforTextVF_W_Wght.8022447a.woff2") format("woff2-variations"); font-style: normal; font-weight: 400 800; font-display: swap; }
 @font-face { font-family: "Madefor"; src: url("media/WixMadeforTextVF_W_Wght.8022447a.woff2") format("woff2-variations"); font-style: normal; font-weight: 400 800; font-display: swap; }
 @font-face { font-family: "WorkSans-ExtraLight"; src: url("//fonts.gstatic.com/s/worksans/v3/FD_Udbezj8EHXbdsqLUpl6lSqKUsDpiXlwfj-ZM2w_A.eot?#iefix") format("eot"), url("//fonts.gstatic.com/s/worksans/v3/FD_Udbezj8EHXbdsqLUplxUOjZSKWg4xBWp_C_qQx0o.woff2") format("woff2"), url("//fonts.gstatic.com/s/worksans/v3/FD_Udbezj8EHXbdsqLUplxa1RVmPjeKy21_GQJaLlJI.woff") format("woff"), url("//fonts.gstatic.com/s/worksans/v3/FD_Udbezj8EHXbdsqLUpl9qQynqKV_9Plp7mupa0S4g.ttf") format("truetype"), url("//fonts.gstatic.com/l/font?kit=FD_Udbezj8EHXbdsqLUpl91LKoZ82bBu2f46DhHcs3c&skey=ebac65da87d8d365&v=v3#WorkSans") format("svg"); font-weight: 700; font-display: block; }
 @font-face { font-family: "WorkSans-SemiBold"; src: url("//fonts.gstatic.com/s/worksans/v3/z9rX03Xuz9ZNHTMg1_ghGalSqKUsDpiXlwfj-ZM2w_A.eot?#iefix") format("eot"), url("//fonts.gstatic.com/s/worksans/v3/z9rX03Xuz9ZNHTMg1_ghGRUOjZSKWg4xBWp_C_qQx0o.woff2") format("woff2"), url("//fonts.gstatic.com/s/worksans/v3/z9rX03Xuz9ZNHTMg1_ghGRa1RVmPjeKy21_GQJaLlJI.woff") format("woff"), url("//fonts.gstatic.com/s/worksans/v3/z9rX03Xuz9ZNHTMg1_ghGdqQynqKV_9Plp7mupa0S4g.ttf") format("truetype"), url("//fonts.gstatic.com/l/font?kit=z9rX03Xuz9ZNHTMg1_ghGd1LKoZ82bBu2f46DhHcs3c&skey=d84f72eaa49bc5a2&v=v3#WorkSans") format("svg"); font-display: block; }
