--- a/calculadora/styles.css
+++ b/calculadora/styles.css
@@ -25,7 +25,7 @@ section{
         top: -350px;
         width: 600px;
         height: 600px;
-        background: #fc6e22;
+        background: #fc22f1;
     }
     section .color:nth-child(2){
         bottom: -150px;
