--- a/subway/styles.css
+++ b/subway/styles.css
@@ -15,50 +15,51 @@ section{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #78c46f, #a4a798);
+    background: linear-gradient(to bottom, #92b4f3, #b6dbd2);
 }
     section .color{
         position: absolute;
         filter: blur(150px);
     }
     section .color:nth-child(1){
-        top: -350px;
+        top: -600px;
         width: 600px;
         height: 600px;
-        background: #1cd38d;
+        background: #82f8bd;
     }
     section .color:nth-child(2){
-        bottom: -150px;
+        bottom: -300px;
         left: 100px;
         width: 500px;
         height: 500px;
-        background: #3e4dd8;
+        background: #cd88fa;
     }
     section .color:nth-child(3){
-        bottom: 50px;
-        right: 100px;
-        width: 300px;
-        height: 300px;
-        background: #c0259e; 
+        bottom: 100px;
+        right: 00px;
+        width: 500px;
+        height: 500px;
+        background: #7aa2eb; 
     }
-.box{
-    position: relative;
-}
-.container{
-    position: relative;
-    width: 800px;
-    min-height: 400px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(5px);
-    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
+    .box{
+        position: relative;
+    }
+    .container{
+        position: relative;
+        width: 800px;
+        min-height: 400px;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+        border-right: 1px solid rgba(255, 255, 255, 0.2);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
 h2{
     position: relative;
     color: white;
@@ -83,10 +84,10 @@ form{
     flex-direction: column;
     align-items: center;
 }
-p{
+p, #demo-box{
     border-radius: 35px;
     color: rgb(255, 255, 255);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.05);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
@@ -95,25 +96,36 @@ p{
     padding: 10px;
     width: 700px;
 }
-#input-btn{
-    color: white;
-    font-size: 16px;
-    width: 100px;
-    height: 58px;
-    border-radius: 12px;
-    max-width: 100px;
-    cursor: pointer;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    font-weight: 600;
-    border: none;
-    outline: none;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-right: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-#input-btn:hover{
-    background: rgba(0, 0, 0, 0.1);
-}
+    p:hover{
+        background: rgba(0, 0, 0, 0.05);
+    }
+    #input-btn{
+        color: white;
+        font-size: 16px;
+        width: 100px;
+        height: 40px;
+        border-radius: 12px;
+        max-width: 100px;
+        cursor: pointer;
+        margin-bottom: 10px;
+        margin-left: 15px;
+        font-weight: 600;
+        border: none;
+        outline: none;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+        background: rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        border-right: 1px solid rgba(255, 255, 255, 0.1);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+    #input-btn:hover{
+        background: rgba(0, 0, 0, 0.1);
+    }
+    #demo{
+    }
+    #demo-box{
+        text-align: center;
+        height: 20px;
+        width: 150px;
+        margin: 10px;
+    }
