--- a/03-12-2021/styles.css
+++ b/03-12-2021/styles.css
@@ -1,16 +1,13 @@
 *, *::after, *::before{
     box-sizing: border-box;
 }
-:root{
-    --cell-size: 100px;
-    --mark-size: calc(var(var(--cell-size)) * 0.9);
-}
 body{
     margin: 0;
 }
  .board{
-     width: 100vw;
-     height: 100vw;
+     margin: 0 auto;
+     width: 400px;
+     height: 400px;
      display: grid;
      justify-content: center;
      align-content: center;
@@ -18,26 +15,23 @@ body{
      align-items: center;
      grid-template-columns: repeat(3 , auto);
  }
-  .cell{
-      width: var(--cell-size);
-      height: var(--cell-size);
+  .box{
+      width: 100px;
+      height: 100px;
       border: 1px solid rgb(0, 0, 0);
       display: flex;
       justify-content: center;
       align-content: center;
   }
-   .cell:first-child, .cell:nth-child(2), .cell:nth-child(3){
+   .box:first-child, .box:nth-child(2), .box:nth-child(3){
        border-top: none;
    }
-   .cell:first-child, .cell:nth-child(4), .cell:nth-child(7){
+   .box:first-child, .box:nth-child(4), .box:nth-child(7){
        border-left: none;
    }
-   .cell:nth-child(3), .cell:nth-child(6), .cell:nth-child(9){
+   .box:nth-child(3), .box:nth-child(6), .box:nth-child(9){
     border-right: none;
    }
-   .cell:nth-child(7), .cell:nth-child(8), .cell:nth-child(9){
+   .box:nth-child(7), .box:nth-child(8), .box:nth-child(9){
     border-bottom: none;
-   }
-   .cell.x{
-       background-color: yellow;
    }
