--- a/allStarsCarrinho/styles.css
+++ b/allStarsCarrinho/styles.css
@@ -1,10 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
-    background-color: azure;
+    font-family: 'Poppins', sans-serif;
+    background-color: lightgreen;
+    color: white;
 }
 body{
+    width: 700px;
     margin: 10px auto;
     padding: 0;  
     display: flex;
     justify-content: center;
-
+}
+button{
+    height: 100px;
+    width: 100px;
+    font-size: 32px;
+    border-radius: 25px;
+}
+main{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+    #btn-run{
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    #flag{
+        margin: 0 0 0 10px;
+        background-color: white;
+        width: 710px;
+        height: 400px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        text-align: center;
+        align-items: flex-start;
+    }
+        .street{
+            background-color: gray;
+            width: 700px;
+            height: 130px;
+            border: 5px solid white;
+            border-radius: 10px;
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+            text-align: center;
+            align-items: flex-start;
+        }
+            .street div{
+                margin-left: 50px;
+                position:absolute;
+                height: 100px;
+                width: 200px;
+                background-image: url(assets/red.png);
+                background-size: cover;
+            }
+                #carPedro{
+                }
+                #carJuca{
+                    background-image: url(assets/grey.png);
+                }
+                #carEdna{
+                    background-image: url(assets/blue.png);
+                }
+            .street span{
+                position:absolute;
+                margin-left: 75px;
+                font-size: 60px;
+                font-weight: 700;
+            }
+h1{
+  transform: rotate(-90deg);
+  font-weight: 400;
 }
