--- a/allStarsCarrinho - Copia/styles.css
+++ b/allStarsCarrinho - Copia/styles.css
@@ -1,33 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
     font-family: 'Poppins', sans-serif;
-    background-color: lightgreen;
+    background-color: #72BA72;
     color: white;
 }
-body{
+.container{
     width: 700px;
     margin: 10px auto;
     padding: 0;  
     display: flex;
+    flex-direction: column;
     justify-content: center;
-}
-button{
-    height: 100px;
-    width: 100px;
-    font-size: 32px;
-    border-radius: 25px;
 }
 main{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
     #btn-run{
         height: 400px;
+        width: 190px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
+        .btn{
+            height: 100px;
+            width: 100px;
+            font-size: 32px;
+            border-radius: 25px;
+        }
     #flag{
         margin: 0 0 0 10px;
         background-color: white;
@@ -52,6 +55,10 @@ main{
             text-align: center;
             align-items: flex-start;
         }
+            .street h1{
+                transform: rotate(-90deg);
+                font-weight: 400;
+            }
             .street div{
                 margin-left: 50px;
                 position:absolute;
@@ -74,7 +81,48 @@ main{
                 font-size: 60px;
                 font-weight: 700;
             }
-h1{
-  transform: rotate(-90deg);
-  font-weight: 400;
-}
+        #info{
+            height: 385px;
+            background-color: white;
+            border-radius: 0 10px 10px 0;
+            display: flex;
+            flex-direction: column;
+            justify-content:space-around;
+        }
+            #info div{
+                margin-right: 10px;
+                border-radius: 0 10px 10px 0;
+                width: 130px;
+                height: 110px;
+                background-color: gray;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: center;
+            }
+    #podium{
+        margin-top: 20px;
+        width: 620px;
+        height: 200px;
+        border: 5px solid white;
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+        background-color: white;
+        border-radius: 10px;
+    }
+        #podium div{
+            background-color: gray;
+            width: 200px;
+            border-radius: 10px;
+        }
+    #simu{
+        position: absolute;
+        margin: -100px 0 0 100px;
+        height: 50px;
+        width: 150px;
+        font-size: 20px;
+        border-radius: 25px;
+        background-color: #ED9485;
+        color: white;
+    }
