--- a/jogoDaVelha/style.css
+++ b/jogoDaVelha/style.css
@@ -25,7 +25,8 @@ body{
         height: 100px;
         width: 100px;
         border: 2px solid white;
-        font-size: 50px;
+        font-size: 80px;
+        font-weight: bold;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -44,7 +45,7 @@ body{
         }
         input{
             position: absolute;
-            margin: 300px 0 0 400px;
+            margin: 450px 0 0 0;
             height: 50px;
             width: 100px;
             font-size: 22px;
